@@ -1,3 +1,4 @@
+* [2016-03-24] mpz_shash using now hash function g() instead of h()
 * [2016-03-20] adds protection against malicious verifiers through EDCF
 * [2016-03-13] provides a test program for RBC protocol
 * [2016-03-02] provides a distributed coin-flipping (EDCF) protocol
